# gw-zaishen-bot

./: .gitignore  CONTRIBUTING.md  README.md  bot.py  commands.py  config.py  gw-zaishen-bot.conf.example  gw1-zaishen-bot.conf.example  pyproject.toml  render.py  requirements-dev.txt  storage.py  views.py  zaishen.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
tests/: test_render_admin.py  test_storage.py  test_zaishen.py
