# Tooling config only. The bot is deployed as plain files; this is not a packaged project, so there
# is no [project]/[build-system] table — just shared config for the dev checks (ruff + pytest).

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Error-level rules only (pyflakes F + syntax/runtime E9) — lint for real bugs, not style.
select = ["E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# the bot modules sit beside this file (the bot/ dir); put it on the path so tests can `import zaishen`.
pythonpath = ["."]
